# dotfiles

./: .gitmodules  androidtools.txt  dircolors  ly-config.ini  setup.sh  zshrc
cheatsheets/: test.db
config/: kanata.kbd
config/gdb/: gdbinit
config/hypr/: colors.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  hyprtoolkit.conf  switch-theme.sh
config/kanata/: kanata.kbd
config/kitty/: current-theme.conf  custom-gruvbox.conf  cyberpunk-custom.conf  kitty.conf  kitty.conf.bak
config/nvim/: init.lua  lazy-lock.json
config/rofi/: config.rasi  dialog.rasi  floating-cmd.rasi  password-wifi.rasi  root-password.rasi  wifi-dialog.rasi
config/scripts/: pathifier.sh  test.sh
config/sddm/: notes.txt  sddm.conf
config/starship/: preset-manager.sh
config/swaync/: config.json  config.json.bak  style.css  (+2 more)
project_templates/cpptemplate/: .clang-format  CMakeLists.txt  README.md
project_templates/cpptemplate/.cache/clangd/index/: Shell.cpp.BBC40C9EF8C20485.idx  Shell.h.4749DE1078A6DFF2.idx  base.h.81D7CC6985417B30.idx  color.h.E25A912FDDB1419D.idx  core.cpp.73F0AB17665D7182.idx  core.h.B287DAC9E885A0C7.idx  core.h.F3B2431205C31FB6.idx  format-inl.h.A3031052D8313E5B.idx  format.h.8F39B220F4C4A95A.idx  test.cpp.DF525A2D5447BDF9.idx
project_templates/cpptemplate/include/cheetah/: core.h
project_templates/cpptemplate/src/: core.cpp
project_templates/cpptemplate/test/: test.cpp
scripts/: find_java_class.sh  lldb-updater.sh  pathifier.sh  prun.sh  registracker.py  set-alarm.sh  set-timer.sh  skm.sh  test.sh  tmp  update-system.sh  wallpaper  wpp.sh
(+131 files in other folders)
